# cop_gnn

./: .gitignore  Makefile  README.md  pyproject.toml  settings.ini
cop_gnn/: __init__.py
nbks/: CS224W_Colab_0.ipynb  CS224W_Colab_1_2024_25.ipynb  CS224W_Colab_2.ipynb  CS224W_Colab_3.ipynb  GCN-2.ipynb  GCN-cora.ipynb  GCN-grok-classif.ipynb  GCN-grok-similarity.ipynb  GCN.ipynb  deepwalk-pytorch-geo.ipynb  grakel.ipynb  graph_analyis.ipynb  graph_transformer.ipynb  masked_attn.ipynb  networkx.ipynb  node2vec.ipynb  node_embedding.ipynb
nbks/CS224W/: CS224W_Colab_0.ipynb
