[tool.poetry]
name = "cop-gnn"
version = "0.1.0"
description = ""
authors = ["jkunz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2"
torchvision = "0.19"
matplotlib = "^3"
icecream = "^2"
torch-tb-profiler = "^0"
numpy = "<2.0.0"
tqdm = "^4"
torch-geometric = "^2"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
grakel = "^0.1.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0"
nbdev = "^2"
ipykernel = "^6"
setuptools = "^70"
black = "^24"
tensorboard = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
