[project]
name = "cop-gnn"
version = "0.1.0"
description = "Graph Neural Network research project"
authors = [
    {name = "jkunz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "torchvision>=0.0.0",
    "matplotlib>=3.0.0",
    "icecream>=2.0.0",
    "torch-tb-profiler>=0.1.0",
    "numpy<2.0.0",
    "tqdm>=4.0.0",
    "torch-geometric>=2.0.0",
    "scipy>=1.15.1",
    "scikit-learn>=1.6.1",
    "grakel>=0.1.10",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "pyfglt>=0.3.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "nbdev>=2.0.0",
    "ipykernel>=6.0.0",
    "setuptools>=70.0.0",
    "black>=24.0.0",
    "tensorboard>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cop_gnn"]
